Wrappers/MyGUI.Export/Generate/MyGUI.Export_EditBox.h


		typedef void (MYGUICALLBACK *ExportHandle)(
			Convert<MyGUI::Edit *>::Type );

		
		MYGUIEXPORT void MYGUICALL ExportEditBoxEvent_DelegateEditTextChange( ExportHandle _delegate )
		{
			mExportHandle = _delegate;
		}

		MYGUIEXPORT void MYGUICALL ExportEditBoxEvent_AdviseEditTextChange( MyGUI::Widget* _widget, bool _advise )
		{
			static_cast< MyGUI::Edit* >(_widget)->eventEditTextChange = _advise ? MyGUI::newDelegate(OnEvent) : nullptr;
		}

		typedef void (MYGUICALLBACK *ExportHandle)(
			Convert<MyGUI::Edit *>::Type );

		
		MYGUIEXPORT void MYGUICALL ExportEditBoxEvent_DelegateEditSelectAccept( ExportHandle _delegate )
		{
			mExportHandle = _delegate;
		}

		MYGUIEXPORT void MYGUICALL ExportEditBoxEvent_AdviseEditSelectAccept( MyGUI::Widget* _widget, bool _advise )
		{
			static_cast< MyGUI::Edit* >(_widget)->eventEditSelectAccept = _advise ? MyGUI::newDelegate(OnEvent) : nullptr;
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetHScrollPosition( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getHScrollPosition( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetHScrollPosition( MyGUI::Widget* _native , Convert<size_t>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setHScrollPosition( Convert<size_t>::From( _value ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetHScrollRange( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getHScrollRange( ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_IsVisibleHScroll( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->isVisibleHScroll( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetVisibleHScroll( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setVisibleHScroll( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetVScrollPosition( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getVScrollPosition( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetVScrollPosition( MyGUI::Widget* _native , Convert<size_t>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setVScrollPosition( Convert<size_t>::From( _value ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetVScrollRange( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getVScrollRange( ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_IsVisibleVScroll( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->isVisibleVScroll( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetVisibleVScroll( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setVisibleVScroll( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_GetInvertSelected( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->getInvertSelected( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetInvertSelected( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setInvertSelected( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_GetTabPrinting( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->getTabPrinting( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetTabPrinting( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setTabPrinting( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_GetEditWordWrap( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->getEditWordWrap( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetEditWordWrap( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setEditWordWrap( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetPasswordChar_char( MyGUI::Widget* _native,
			Convert<const MyGUI::UString &>::Type _char )
		{
			static_cast< MyGUI::Edit * >(_native)->setPasswordChar(
				Convert<const MyGUI::UString &>::From( _char ) );
		}

		MYGUIEXPORT Convert<uint32_t>::Type MYGUICALL ExportEditBox_GetPasswordChar( MyGUI::Widget* _native )
		{
			return Convert<uint32_t>::To( static_cast< MyGUI::Edit * >(_native)->getPasswordChar( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetPasswordChar( MyGUI::Widget* _native , Convert<uint32_t>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setPasswordChar( Convert<uint32_t>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_GetEditStatic( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->getEditStatic( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetEditStatic( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setEditStatic( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_GetEditMultiLine( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->getEditMultiLine( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetEditMultiLine( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setEditMultiLine( Convert<bool>::From( _value ) );
		}